<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient"
    tools:context=".HomeViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="4">
        <LinearLayout
            android:id="@+id/home_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/home_background"
            android:elevation="8dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/big_title"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/lato_bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/uvn_bach_tuyet"
                tools:ignore="SmallSp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/home_content"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:elevation="8dp"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/greetingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/uvnbaybuom_r"/>

                <TextView
                    android:id="@+id/date_home_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:fontFamily="@font/uvnbaybuom_r"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:rowCount="2">

                <androidx.cardview.widget.CardView
                    android:id="@+id/room_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_gravity="fill"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="19dp"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/white">
                    
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/indoor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:fontFamily="@font/uvn_bach_tuyet"
                            android:textColor="@color/black"
                            android:text="@string/room_1"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/room_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:layout_gravity="fill"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="19dp"
                    app:cardElevation="4dp"
                    app:cardBackgroundColor="@color/white">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/todo"
                            android:src="@drawable/indoor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:fontFamily="@font/uvn_bach_tuyet"
                            android:textColor="@color/black"
                            android:text="@string/room_2"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>